# Whisper-Everywhere

./: .gitignore  output.srt  pyproject.toml  run_client_demo.py  run_server.py  run_server.sh  test_codeium.py
whisper_live/: server.py
