[tool.poetry]
name = "whisper-everywhere"
version = "0.1.0"
description = ""
authors = ["goodweather0322 <a82521112@gmail.com>"]
readme = "README.md"
packages = [{include = "whisper_everywhere"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
commitizen = "^3.22.0"
cz-conventional-gitmoji = "^0.2.4"


[tool.commitizen]
name = "cz_gitmoji"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = true
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
